// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionButton should render blue small button 1`] = `
<div
  className="container blue sm primary"
  onClick={[MockFunction]}
>
  TestButton
</div>
`;

exports[`ActionButton should render default 1`] = `
<div
  className="container blue lg primary"
  onClick={[MockFunction]}
>
  TestButton
</div>
`;

exports[`ActionButton should render medium sized button 1`] = `
<div
  className="container blue md primary"
  onClick={[MockFunction]}
>
  TestButton
</div>
`;
